--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "grunt": "^0.4.5",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-notify": "^0.4.1",
-    "grunt-wait": "^0.1.0",
+    "grunt-shell": "^1.1.2",
     "grunt-wait-server": "^0.2.1"
   }
 }
